--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.4"
   }
